# AwesomeEngine

./: .gitignore  .gitmodules  CWindowsSystem32cmd.exe.txt  GenerateEditorSolution.bat  GenerateSandboxSolution.bat  LICENSE  README.md  add_submodule.txt
demo/: .gitignore  CMakeLists.txt  Makefile  demo  log.txt  main.cpp
demo/include/: cube.h  hello_cube.h  hello_triangle.h  loading_shaders.h  multi_sprite.h  random_color.h  sprite_animation.h  test.h  test2.h  test_input_behaviour.h  texture.h  texture_demo.h  triangle.h  triangle2.h
demo/resources/shaders/: hello_triangle.fs  test.fs  test.vs  texture.fs  texture.vs
demo/src/: main.cpp
engine/: .gitignore  CMakeLists.txt  GLOB_RECURSE
engine/core/: time.cpp  timer.cpp  timer.h  window.cpp
engine/experimental/asset/: asset.cpp  asset.h  asset_database.cpp  asset_database.h  asset_database_generated.cpp  asset_database_generated.h  asset_handler_generated.cpp  asset_handler_generated.h  asset_importer.cpp  asset_importer.h  asset_library.cpp  asset_library.h  image_asset.h  image_asset_generated.h  prefab_asset.h  prefab_asset_generated.cpp  prefab_asset_generated.h  resource_loader.h  scene_asset.h  scene_asset_generated.cpp
engine/experimental/ecs/: component.cpp  component.h  component_array.h  ecs.h  entity.h  entity_ptr.h
engine/experimental/network/: client.cpp  client.h  command_phase_generated.h  command_processor.h  connection.cpp  message.h  net_mode.h  net_mode_generated.cpp  network_manager.h  session_manager.cpp  session_manager.h  user_session.cpp  user_session.h
engine/include/awesome/: application.h  awesome.h  component.h  engine_module.h  minimal.h  object.h  object_iterator.h  rendering.h  unique_id.h
engine/modules/fundation/: CMakeLists.txt
engine/old/: minimal.h
engine/old/core/: application.cpp  application_module.h  event.h  input.cpp  input.h  log.h  time.cpp  time.h  timer.cpp  timer.h
engine/old/data/: color.cpp  color.h  date_time.cpp  date_time.h  string.cpp  string.h  string_id.h
engine/platform/desktop/: desktop_input.cpp  desktop_time.cpp  desktop_window.cpp
engine/src/: application.cpp  awesome.cpp  component.cpp  object.cpp  unique_id.cpp
engine/src/awesome/: awesome.h  minimal.h  platform.h  types.h
engine/src/components/: rendering_component.cpp
engine/src/rendering/: render_pipeline.cpp  renderer.cpp  rendering_data.cpp  sprite_batch.cpp
engine/src/scene/: scene.cpp  scene_reader.cpp
engine/src/scenegraph/: component.cpp  object.cpp  scene.cpp  scene_reader.cpp
engine/src/utility/: log.cpp
engine/src/windowing/: screen.cpp  window.cpp
engine/super_temp/graphics/: graphics.cpp  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h  texture.h
engine/temp/core/: engine.cpp  event.h  game.h  input.h  singleton.h  time.h
engine/temp/graphics/: graphics_context.h  index_buffer.cpp  index_buffer.h  shader.cpp  shader_program.h  vertex_array.h  vertex_buffer.cpp  vertex_buffer_layout.cpp  vertex_buffer_layout.h
experimental/ECS/: CMakeLists.txt
experimental/ECS/src/: behaviour.h  component.h  component_handler.h  component_ptr.h  data_component.h  ecs.h  engine.h  entity.h  entity_manager.h  icomponent.h  logic_component.h  main.cpp  system.h  system_manager.h  type_id.h
programs/amake/: .gitignore  CMakeLists.txt
programs/amake/src/: engine_config.h  game_config.h  main.cpp
sandbox/: CMakeLists.txt  fff.prefab  fff.prefab.asset
sandbox/assets/: Camera.prefab  Camera.prefab.asset  aaa.spriteanim  aaa.spriteanim.asset  aaaaa.spriteanim.asset  aass.sprite  aeo.sprite.asset  aguy.prefab.asset  anim_prova.spriteanim.asset  animated_guy.prefab  animated_guy.prefab.asset  animated_guy2.prefab  animated_guy2.prefab.asset  animated_guy3.prefab  animated_guy3.prefab.asset  assets.json  atlas.sprite  atlas.sprite.asset  base_sprite.sprite  base_sprite.sprite.asset  base_sprite_1.sprite  base_sprite_1.sprite.asset  base_sprite_2.sprite  base_sprite_2.sprite.asset  base_sprite_3.sprite.asset  batman.sprite  batman.sprite.asset  batman1.sprite  batman1.sprite.asset  batman_logo.png.asset  batz.sprite  batz.sprite.asset  bullet.png.asset  bullet.prefab  bullet.prefab.asset  bullet.sprite.asset  camera.prefab  camera.prefab.asset  ciao.scene  ciao.scene.asset  (+34 more)
sandbox/assets/Animations/: green-slime-idle.spriteanim  green-slime-idle.spriteanim.asset  hero-idle.spriteanim  hero-idle.spriteanim.asset  hero-walk.spriteanim  hero-walk.spriteanim.asset  knight-idle.spriteanim  knight-idle.spriteanim.asset  knight-walk.spriteanim  knight-walk.spriteanim.asset  red-fire.spriteanim  red-fire.spriteanim.asset  skeleton-attack.spriteanim  skeleton-attack.spriteanim.asset  skeleton-idle.spriteanim  skeleton-idle.spriteanim.asset  skeleton-walk.spriteanim  skeleton-walk.spriteanim.asset  slime-idle.spriteanim  slime-idle.spriteanim.asset  test.spriteanim  test.spriteanim.asset
sandbox/assets/Audio/: arachidi.mp3.asset
sandbox/assets/Maps/: Map1.sprite  Map1.sprite.asset  map.png.asset  world.png.asset  world.sprite  world.sprite.asset  world.tmx
sandbox/backup/: game_player_controller.h  game_player_controller_generated.h  game_player_state.cpp  game_player_state.h  game_player_state_generated.cpp  game_player_state_generated.h  game_tags_generated.cpp  main.cpp  resource_type.h
sandbox/backup/data/: wave.h  (+5 more)
sandbox/src/: game.cpp  game.h  game_mode.h  game_player_controller.cpp  game_player_controller.h  game_player_controller_generated.cpp  game_player_controller_generated.h  game_player_state.h  game_player_state_generated.cpp  game_player_state_generated.h  game_tags.h  game_tags_generated.cpp  game_tags_generated.h  main.cpp  minion.cpp  minion.h  path.cpp  path.h  path_navigator.cpp  path_navigator.h  pojectile.cpp  pojectile.h  resource_type_generated.cpp  resource_type_generated.h  sandbox_game.cpp  sandbox_game.h  shinygalaxy_game.cpp  shinygalaxy_game.h  target_finder.cpp  target_finder.h  tower.cpp  tower.h  types.h  wave_manager.cpp  wave_manager.h
survivalpp/: .gitignore  CMakeLists.txt
survivalpp/src/: game.cpp  game.h  main.cpp
(+2127 files in other folders)
